<resources>
    <string name="app_name">PC Status</string>
    <string name="txtProyecto">PC Status</string>
    <string name="btnIrLogin">Iniciar Sesion</string>
    <string name="btnIrRegistro">Registrarse</string>
    <string name="btnRegistrar">Crear cuenta</string>
    <string name="btnLoguear">Ingresar</string>
    <string name="btnBvnInicio">Inicio</string>
    <string name="btnBvnPerfil">Mi Perfil</string>
    <string name="btnBvnConsulta">Consulta Equipo</string>
    <string name="btnBvnEncuentranos">Encuentranos</string>
    <string name="edtLoginEmail">Usuario (Email)</string>
    <string name="edtLoginPassword">Contraseña</string>
    <string name="edtRegistroNombre">Nombre</string>
    <string name="edtRegistroAPaterno">Apellido Paterno</string>
    <string name="edtRegistroAMaterno">Apellido Materno</string>
    <string name="edtRegistroEmail">Email</string>
    <string name="txtBienvenida">Bienvenido</string>
    <string name="edtRegistroPassword">Contraseña</string>
    <string name="txtRegistroAux">No tienes una cuenta\n\n Registrate ¡¡ AQUI !!</string>
    <string name="txtBnvPublicidad">PC EXTREME TE OFRECE</string>
    <string name="txtBnvInfoPubli">Mantenimiento premium con materiales de la mejor calidad, cotizaciones y servicios de ensambles\nVisita nuestro establecimiento</string>
    //VENTANA DE CONSULTA-DETALLE
    <string name="txtCltNumSerie">Num. Serie</string>
    <string name="txtCltModelo">Modelo</string>
    <string name="txtCltMarca">Marca</string>
    <string name="txtCltFchRegistro">Fecha de Registro</string>
    <string name="txtCltDiagnostico">Diagnostico</string>
    <string name="txtCltEstado">Estado del Equipo</string>
    <string name="txtCltDetalles">Detalles del equipo</string>
    <string name="txtCltCosto">Costo estimado</string>
    <string name="txtCrearCuenta">¿No tienes una cuenta? Crea una dando clic <u>aquí.</u></string>

</resources>