<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="241dp"
        android:layout_height="148dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logopcstatus" />

    <EditText
        android:id="@+id/edtRegistroNombre"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/edtRegistroNombre"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/edtRegistroAPaterno"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/edtRegistroAMaterno"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRegistroNombre" />

    <EditText
        android:id="@+id/edtRegistroAMaterno"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/edtRegistroAPaterno"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRegistroAPaterno" />

    <EditText
        android:id="@+id/edtRegistroEmail"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/edtRegistroEmail"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRegistroAMaterno" />

    <EditText
        android:id="@+id/edtRegistroPassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/edtRegistroPassword"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRegistroEmail" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="44dp"
        android:text="@string/btnRegistrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRegistroPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>