<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1E1E">

    <TextView
        android:id="@+id/txtBienvenida"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:text="@string/txtBienvenida"
        android:textColor="#FFFFFF"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBvnLogo" />

    <Button
        android:id="@+id/btnBvnConsulta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnBvnConsulta"
        android:textColor="@color/texto"
        android:textSize="16dp"
        app:backgroundTint="@color/colorBotones"
        app:cornerRadius="8dp"
        app:layout_constraintStart_toEndOf="@+id/btnBvnInicio"
        app:layout_constraintTop_toBottomOf="@+id/txtBienvenida" />

    <Button
        android:id="@+id/btnBvnPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:text="@string/btnBvnPerfil"
        android:textColor="@color/texto"
        android:textSize="16dp"
        app:backgroundTint="@color/colorBotones"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnBvnConsulta"
        app:layout_constraintTop_toBottomOf="@+id/txtBvnNombre" />

    <Button
        android:id="@+id/btnBvnInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnBvnInicio"
        android:textColor="@color/texto"
        android:textSize="16dp"
        app:backgroundTint="@color/colorBotones"
        app:cornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBienvenida" />

    <TextView
        android:id="@+id/txtBvnNombre"
        android:layout_width="182dp"
        android:layout_height="38dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:text=" "
        android:textColor="@color/texto"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txtBienvenida"
        app:layout_constraintTop_toBottomOf="@+id/imgBvnLogo" />

    <androidx.cardview.widget.CardView
        android:layout_width="360dp"
        android:layout_height="246dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="27dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FDFBFB">

            <Button
                android:id="@+id/btnBvnEncuentranos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="106dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="106dp"
                android:text="@string/btnBvnEncuentranos"
                android:textColor="@color/texto"
                android:textSize="16dp"
                app:backgroundTint="@color/colorBotones"
                app:cornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtBnvInfoPubli" />

            <TextView
                android:id="@+id/txtBnvPublicidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="37dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="52dp"
                android:text="@string/txtBnvPublicidad"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtBnvInfoPubli"
                android:layout_width="328dp"
                android:layout_height="135dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="16dp"
                android:text="@string/txtBnvInfoPubli"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtBnvPublicidad" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imgBvnLogo"
        android:layout_width="477dp"
        android:layout_height="87dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logopcstatus" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="373dp"
        android:layout_height="231dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBvnConsulta"
        app:srcCompat="@drawable/imgreprovideo" />

</androidx.constraintlayout.widget.ConstraintLayout>