<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1E1E">

    <Button
        android:id="@+id/btnCltInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="14dp"
        android:text="@string/btnBvnInicio"
        android:textColor="@color/texto"
        android:textSize="16dp"
        app:backgroundTint="@color/colorBotones"
        app:cornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/btnCltConsulta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="14dp"
        android:text="@string/btnBvnConsulta"
        android:textColor="@color/texto"
        android:textSize="16dp"
        app:backgroundTint="@color/colorBotones"
        app:cornerRadius="8dp"
        app:layout_constraintStart_toEndOf="@+id/btnCltInicio"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/btnCltPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="12dp"
        android:text="@string/btnBvnPerfil"
        android:textColor="@color/texto"
        android:textSize="16dp"
        app:backgroundTint="@color/colorBotones"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCltConsulta"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <androidx.cardview.widget.CardView
        android:layout_width="386dp"
        android:layout_height="549dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCltInicio">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="387dp"
            android:layout_height="747dp">

            <TextView
                android:id="@+id/txtCltCosto"
                android:layout_width="101dp"
                android:layout_height="32dp"
                android:layout_marginEnd="17dp"
                android:layout_marginBottom="226dp"
                android:text=" "
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/txtCltDiagnostico"
                android:layout_width="352dp"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="19dp"
                android:text=" "
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/txtCltDetalles"
                android:layout_width="352dp"
                android:layout_height="77dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="19dp"
                android:text=" "
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/txtCltEstado"
                android:layout_width="135dp"
                android:layout_height="33dp"
                android:layout_marginStart="68dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="30dp"
                android:text=" "
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtCltFchRegistro"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/txtCltFchRegistro"
                android:layout_width="137dp"
                android:layout_height="33dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text=" "
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/txtCltMarca"
                android:layout_width="136dp"
                android:layout_height="19dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="29dp"
                android:layout_marginEnd="17dp"
                android:text=" "
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/txtCltModelo" />

            <TextView
                android:id="@+id/txtCltModelo"
                android:layout_width="136dp"
                android:layout_height="19dp"
                android:layout_marginStart="37dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="17dp"
                android:text=" "
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/txtCltNumSerie" />

            <TextView
                android:id="@+id/txtCltNumSerie"
                android:layout_width="136dp"
                android:layout_height="19dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="17dp"
                android:text=" "
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView1"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgCltEquipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:text="@string/txtCltNumSerie"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imgCltEquipo"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="30dp"
                android:text="@string/txtCltModelo"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imgCltEquipo"
                app:layout_constraintTop_toBottomOf="@+id/textView1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="28dp"
                android:text="@string/txtCltMarca"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imgCltEquipo"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="89dp"
                android:layout_marginTop="38dp"
                android:layout_marginEnd="53dp"
                android:text="@string/txtCltEstado"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/txtCltMarca" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="26dp"
                android:text="@string/txtCltFchRegistro"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgCltEquipo" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="249dp"
                android:text="@string/txtCltDetalles"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtCltFchRegistro" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="295dp"
                android:text="@string/txtCltDiagnostico"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtCltDetalles" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="159dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="239dp"
                android:text="@string/txtCltCosto"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtCltCosto"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="477dp"
        android:layout_height="87dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>