<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1E1E">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="477dp"
        android:layout_height="87dp"
        android:background="#000000"
        android:src="@drawable/logopcstatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.688"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="330dp"
        android:layout_height="484dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/edtLoginEmail"
                android:layout_width="260dp"
                android:layout_height="55dp"
                android:layout_marginTop="48dp"
                android:ems="10"
                android:hint="@string/edtLoginEmail"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/imvLogin"
                app:layout_constraintStart_toStartOf="@+id/imvLogin"
                app:layout_constraintTop_toBottomOf="@+id/imvLogin" />

            <EditText
                android:id="@+id/edtLoginPassword"
                android:layout_width="259dp"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/edtLoginPassword"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/edtLoginEmail"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/edtLoginEmail"
                app:layout_constraintTop_toBottomOf="@+id/edtLoginEmail" />

            <Button
                android:id="@+id/btnLoguear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/colorBotones"
                android:text="@string/btnLoguear"
                app:cornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="@+id/edtLoginPassword"
                app:layout_constraintStart_toStartOf="@+id/edtLoginPassword"
                app:layout_constraintTop_toBottomOf="@+id/edtLoginPassword" />

            <ImageView
                android:id="@+id/imvLogin"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/iniciarsesion" />

            <TextView
                android:id="@+id/txtCrearCuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="¿No tienes una cuenta? Crea una dando clic aquí."
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>